feat: Reorganize project with production-grade structure and Bazel build system
- Reorganized codebase into cmd/, pkg/, and internal/ directories
- Added Bazel build system with MODULE.bazel and BUILD.bazel files
- Created command-line tools: list-deployments, symptom-collection, apply-patch
- Added comprehensive configuration management with Viper
- Implemented structured logging with Zap
- Added Kubernetes client wrapper with high-level operations
- Enhanced patch management with MD5 validation and health monitoring
- Improved symptom collection with parallel log monitoring
- Added unit tests, Makefile, CI/CD workflows, and documentation
- Preserved all original comments and requirements from original code

--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,29 @@
 *.dll
 *.so
 *.dylib
-MiniUdmAsyncErrorTracing
+/bin/
+/miniumd
 
 # Test binary
 *.test
 
 # Output of the go coverage tool
 *.out
+/coverage/
 
 # Dependency directories
 vendor/
 
 # Go workspace file
 go.work
+
+# Bazel
+bazel-*
+.bazel/
+bazel-bin/
+bazel-out/
+bazel-testlogs/
+*.bazel.lock
 
 # IDE
 .idea/
@@ -35,4 +45,12 @@ Thumbs.db
 # Temporary files
 tmp/
 temp/
+
+# Configuration (local overrides)
+config.local.yaml
+*.local.yaml
+
+# Build artifacts
+dist/
+build/
 
